backend/api/tests/integration/snapshots/integration__circle__create-2.snap
---
source: tests/integration/circle.rs
expression: body
---
{
  "id": "[id]",
  "displayName": "test circle",
  "createdBy": "1f241e1b-b537-493f-a230-075cb16315be",
  "description": "test description",
  "memberCount": 0,
  "image": "8a473dd6-ffaa-11eb-86a5-dba3538e5a15",
  "createdAt": "[created_at]",
  "lastEdited": "[last_edited]",
  "joined": false
}
