backend/api/tests/integration/snapshots/integration__circle__join_circle-2.snap
---
source: tests/integration/circle.rs
expression: body

---
{
  "members": [
    "1f241e1b-b537-493f-a230-075cb16315be"
  ],
  "count": 1
}
