backend/api/tests/integration/snapshots/integration__circle__join_circle.snap
---
source: tests/integration/circle.rs
expression: body

---
{
  "members": [
    "7b96a41c-e406-11eb-8176-efd86dd7f444",
    "a641fd6e-e41b-11eb-8176-57df101c2201"
  ],
  "count": 2
}
