backend/api/tests/integration/snapshots/integration__circle__update_circle-1.snap
---
source: tests/integration/circle.rs
expression: body
---
{
  "id": "57a1eaaa-f182-11ec-a96e-13f3929f5b22",
  "displayName": "circle test",
  "createdBy": "1f241e1b-b537-493f-a230-075cb16315be",
  "description": "Test",
  "memberCount": 1,
  "image": "89125d88-ffaa-11eb-86a5-9fd50ab8d8df",
  "createdAt": "[created_at]",
  "lastEdited": "[last_edited]",
  "joined": false
}
